--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epale\n"
+      "epale2\n"
      ]
     }
    ],
    "source": [
-    "print(\"epale\")"
+    "print(\"epale2\")"
    ]
   }
  ],
